Fixed an overflow issue on add discipline dialog

--- a/src/components/discipline-add-dialog/discipline-add-dialog.scss
+++ b/src/components/discipline-add-dialog/discipline-add-dialog.scss
@@ -6,3 +6,7 @@
     color: 	#ff3333;
     border-color: red !important;
 }
+
+.field {
+    max-width: 300px;
+}
